# PlotJuggler

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CMakeLists.txt  FindSuperplotter.cmake  PlotJuggler.desktop.in  README.md  SuperPlotter.pro  _config.yml  appimage_howto.md  busydialog.cpp  busytaskdialog.cpp  busytaskdialog.h  contributors.txt  customtracker.cpp  customtracker.h  draggablewidget.cpp  draggablewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mkdocs.yml  package.xml  plotdata.cpp  plotdata.h  plotmagnifier.cpp  plotmagnifier.h  plotmatrix.cpp  plotmatrix.h  plotwidget.cpp  plotwidget.h  qt_installer_howto.md  removecurvedialog.cpp  removecurvedialog.h  resource.qrc  selectxaxisdialog.cpp  selectxaxisdialog.h  splash.xcf  (+1 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
backward-cpp/: BackwardConfig.cmake  (+1 more)
plotter_gui/: CMakeLists.txt  aboutdialog.ui  add_custom_plot.cpp  add_custom_plot.h  add_custom_plot.ui  axis_limits_dialog.cpp  axis_limits_dialog.h  axis_limits_dialog.ui  busydialog.cpp  busytaskdialog.cpp  curvecolorpick.cpp  curvecolorpick.h  curvecolorpick.ui  curvelist_panel.cpp  curvelist_panel.h  curvelist_panel.ui  curvelist_view.cpp  curvelist_view.h  curvetree_view.cpp  curvetree_view.h  custom_plot.cpp  custom_plot.h  customtracker.cpp  customtracker.h  filterablelistwidget.cpp  filterablelistwidget.h  filterablelistwidget.ui  help_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubar.cpp  nlohmann_parsers.cpp  nlohmann_parsers.h  plot_docker.cpp  plot_docker.h  plot_docker_toolbar.ui  plotdata.cpp  plotdata.h  (+44 more)
plotter_gui/cheatsheet/: cheatsheet_dialog.ui  video_cheatsheet.cpp
plotter_gui/resources/: common.js  default.snippets.xml  geographiclib.min.js  snippets.xml  stylesheet.qss  stylesheet_dark.qss  stylesheet_light.qss
plotter_gui/style/: stylesheet.qss
plotter_gui/style_light/: stylesheet.qss  stylesheet_dark.qss
plotter_gui/transforms/: custom_factory.cpp  custom_function.cpp  custom_function.h  custom_timeseries.cpp  custom_timeseries.h  custom_transform.cpp  custom_transform.h  first_derivative.cpp  first_derivative.h  first_derivative.ui  function_editor.cpp  function_editor.h  function_editor.ui  lua_custom_function.cpp  lua_custom_function.h  moving_average_filter.cpp  moving_average_filter.h  moving_average_filter.ui  outlier_removal.cpp  outlier_removal.h  qml_custom_function.cpp  qml_custom_function.h  scale_transform.cpp  scale_transform.h  scale_transform.ui  transform_selector.cpp  transform_selector.h  transform_selector.ui
plugins/DataLoadCSV/: CMakeLists.txt  DataLoadCSV.pro  dataload_csv.cpp  dataload_csv.h  selectxaxisdialog.cpp  selectxaxisdialog.h
plugins/DataLoadFB/: CMakeLists.txt  dataload_fb.cpp  dataload_fb.h
plugins/DataLoadROS/: CMakeLists.txt  dataload_ros.cpp  dataload_ros.h  dialog_select_ros_topics.cpp  dialog_select_ros_topics.h  dialog_select_ros_topics.ui  ros-type-parser.cpp  ros-type-parser.h
plugins/DataStreamMQTT/: CMakeLists.txt  datastream_mqtt.cpp  datastream_mqtt.h  datastream_mqtt.ui
plugins/DataStreamMQTT/paho.mqtt.c/: CMakeLists.txt
plugins/DataStreamMQTT/paho.mqtt.c/src/: CMakeLists.txt
plugins/DataStreamROS/: CMakeLists.txt  datastream_ROS.cpp  datastream_ROS.h  rostopicselector.cpp  rostopicselector.h  rostopicselector.ui
plugins/DataStreamSample/: CMakeLists.txt  datastream_sample.cpp  datastream_sample.h
plugins/DataStreamUDP/: CMakeLists.txt  udp_client.py  udp_server.cpp
plugins/DataStreamWebsocket/: CMakeLists.txt  websocket_client.py  websocket_server.cpp  websocket_server.h  websocket_server.ui
plugins/ROS/: CMakeLists.txt  dialog_select_ros_topics.cpp  dialog_select_ros_topics.h  dialog_select_ros_topics.ui  introspection_parser.cpp  introspection_parser.h  qnodedialog.cpp  qnodedialog.h  qnodedialog.ui  rule_editing.cpp  rule_editing.h  rule_editing.ui  ruleloaderwidget.cpp  shape_shifter_factory.hpp
plugins/ROS/DataLoadROS/: dataload_ros.cpp  dataload_ros.h  dialog_select_ros_topics.cpp
plugins/ROS/DataLoadROS2/: dataload_ros2.cpp  dataload_ros2.h
plugins/ROS/DataStreamROS/: datastream_ROS.cpp  datastream_ROS.h  rostopicselector.cpp  rostopicselector.h  rostopicselector.ui
plugins/ROS/DataStreamROS2/: datastream_ros2.cpp  datastream_ros2.h
plugins/ROS/RosMsgParsers/: diagnostic_msg.h  fiveai_stamped_diagnostic.h  geometry_msg_twist.h  geometry_twist_msg.h  odometry_msg.h  pal_statistics_msg.h  ros_messageparser.h  ros_parser.cpp  ros_parser.h
plugins/ROS/RosoutPublisher/: logs_table_model.cpp  logwidget.cpp  modelfilter.cpp  rosout_publisher.cpp  rosout_publisher.h
plugins/ROS/TopicPublisherROS/: statepublisher_rostopic.cpp  statepublisher_rostopic.h  timestamp_injector.cpp  timestamp_injector.h
plugins/ROS/TopicPublisherROS2/: generic_publisher.h  publisher_ros2.cpp  publisher_ros2.h
plugins/ROS/ros1_introspection/include/ros_type_introspection/details/: conversion_impl.hpp
plugins/ROS/ros1_introspection/src/: ros_field.cpp  ros_introspection.cpp  ros_message.cpp
plugins/ROS/ros1_parsers/: covariance_util.h  diagnostic_msg.h  imu_msg.h  jointstates_msg.h  odometry_msg.h  pal_statistics_msg.h  plotjuggler_msgs.h  pose_msg.h  quaternion_msg.h  ros1_parser.cpp  ros1_parser.h  tf_msg.h  twist_msg.h
plugins/ROS/ros2_introspection/include/ros2_introspection/: ros2_introspection.hpp
plugins/ROS/ros2_introspection/src/: ros2_introspection.cpp  stringtree.cpp
plugins/ROS/ros2_parsers/: covariance_util.h  generic_subscription.hpp  imu_msg.h  jointstates_msg.h  odometry_msg.h  plotjuggler_msgs.h  pose_msg.h  quaternion_msg.h  ros2_parser.cpp  ros2_parser.h  twist_msg.h
plugins/ROS2/: CMakeLists.txt  dialog_select_ros_topics.cpp  dialog_select_ros_topics.h  dialog_select_ros_topics.ui  generic_subscription.cpp  generic_subscription.hpp  ros_manager.cpp  ros_manager.h  ros_parser.cpp  ros_parser.h
plugins/ROS2/DataLoadROS2/: dataload_ros2.cpp  dataload_ros2.h
plugins/ROS2/DataStreamROS2/: datastream_ros2.cpp  datastream_ros2.h
plugins/ROS2/ros2_introspection/src/: ros2_introspection.cpp
(+111 files in other folders)
