<?xml version="1.0"?>
<package>
<name>plotjuggler</name>
<version>2.5.1</version>
<description>PlotJuggler: juggle with data</description>

<maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
<license>LGPLv3</license>

<url type="website">https://github.com/facontidavide/PlotJuggler</url>

<author email="davide.faconti@gmail.com">Davide Faconti</author>

<!-- ROS1 dependencies -->
<buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
<depend condition="$ROS_VERSION == 1">rosbag</depend>
<depend condition="$ROS_VERSION == 1">rosbag_storage</depend>
<depend condition="$ROS_VERSION == 1">roscpp</depend>
<depend condition="$ROS_VERSION == 1">roscpp_serialization</depend>
<depend condition="$ROS_VERSION == 1">rostime</depend>
<depend condition="$ROS_VERSION == 1">topic_tools</depend>
<depend condition="$ROS_VERSION == 1">tf</depend>
<depend condition="$ROS_VERSION == 1">ros_type_introspection</depend>
<depend condition="$ROS_VERSION == 1">diagnostic_msgs</depend>
<depend condition="$ROS_VERSION == 1">nav_msgs</depend>

<!-- ROS2 dependencies -->
<buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
<depend condition="$ROS_VERSION == 2">rclcpp</depend>
<depend condition="$ROS_VERSION == 2">rosbag2</depend>
<depend condition="$ROS_VERSION == 2">rosidl_typesupport_cpp</depend>
<depend condition="$ROS_VERSION == 2">rosidl_typesupport_introspection_cpp</depend>

<!-- common dependancies -->
<depend>qtbase5-dev</depend>
<depend>qtdeclarative5-dev</depend>
<depend>qtmultimedia5-dev</depend>
<depend>binutils</depend>
<depend>libqt5-svg-dev</depend>
<depend>libqt5multimedia5-plugins</depend>

<!-- The export tag contains other, unspecified, tags -->
<export>
<!-- Other tools can request additional information be placed here -->

</export>
</package>
