<?xml version="1.0"?>
<package format="3">
<name>plotjuggler</name>
<version>2.5.1</version>
<description>PlotJuggler: juggle with data</description>

<maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
<license>LGPLv3</license>

<url type="website">https://github.com/facontidavide/PlotJuggler</url>

<author email="davide.faconti@gmail.com">Davide Faconti</author>

<!-- ROS1 dependencies -->
<buildtool_depend >catkin</buildtool_depend>

<depend >rosbag_storage</depend>
<depend >roscpp</depend>
<depend >roscpp_serialization</depend>
<depend >rostime</depend>
<depend >tf</depend>
<depend >diagnostic_msgs</depend>
<depend >nav_msgs</depend>

<!-- ROS2 dependencies -->
<buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

<depend condition="$ROS_VERSION == 2">rcpputils</depend>
<depend condition="$ROS_VERSION == 2">rosbag2</depend>
<depend condition="$ROS_VERSION == 2">rmw_fastrtps_cpp</depend>


<!-- common dependancies -->
<depend>qtbase5-dev</depend>
<depend>qtdeclarative5-dev</depend>
<depend>qtmultimedia5-dev</depend>
<depend>binutils</depend>
<depend>libqt5-svg-dev</depend>
<depend>libqt5multimedia5-plugins</depend>

<!-- The export tag contains other, unspecified, tags -->
<export>
<!-- Other tools can request additional information be placed here -->

</export>
</package>
